@@ -1,3 +1,14 @@
+2010-02-23  Shinichiro Hamaji  <hamaji@chromium.org>
+
+        Reviewed by Eric Seidel.
+
+        [Gtk] Implement layoutTestController.numberOfPages
+        https://bugs.webkit.org/show_bug.cgi?id=35228
+
+        * webkit/webkitprivate.h:
+        * webkit/webkitwebframe.cpp:
+        (webkit_web_frame_number_of_pages):
+
 2010-02-23  José Millán Soto  <jmillan@igalia.com>
 
         Reviewed by Xan Lopez.
