@@ -1,3 +1,13 @@
+2010-02-23  Shinichiro Hamaji  <hamaji@chromium.org>
+
+        Reviewed by Eric Seidel.
+
+        [Gtk] Implement layoutTestController.numberOfPages
+        https://bugs.webkit.org/show_bug.cgi?id=35228
+
+        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
+        (LayoutTestController::numberOfPages):
+
 2010-02-23  Laszlo Gombos  <laszlo.1.gombos@nokia.com>
 
         Reviewed by Kenneth Rohde Christiansen.
