@@ -1,3 +1,12 @@
+2010-02-23  Shinichiro Hamaji  <hamaji@chromium.org>
+
+        Reviewed by Eric Seidel.
+
+        [Gtk] Implement layoutTestController.numberOfPages
+        https://bugs.webkit.org/show_bug.cgi?id=35228
+
+        * platform/gtk/Skipped:
+
 2010-02-23  Tony Chang  <tony@chromium.org>
 
         Not reviewed.
